--- a/gui/detalles/detalleAfiliados.ui
+++ b/gui/detalles/detalleAfiliados.ui
@@ -65,7 +65,7 @@ color: #000000;
       <string notr="true"/>
      </property>
      <property name="currentIndex">
-      <number>2</number>
+      <number>0</number>
      </property>
      <property name="iconSize">
       <size>
@@ -5107,19 +5107,57 @@ background-color: #F8F7F6
   </layout>
  </widget>
  <tabstops>
+  <tabstop>af_tipo</tabstop>
+  <tabstop>af_legajo</tabstop>
+  <tabstop>af_dni</tabstop>
+  <tabstop>af_cuil</tabstop>
   <tabstop>af_apellido</tabstop>
+  <tabstop>af_nombre</tabstop>
   <tabstop>af_fecha_nacimiento</tabstop>
   <tabstop>af_edad</tabstop>
+  <tabstop>af_estado_civil</tabstop>
+  <tabstop>af_nacionalidad</tabstop>
+  <tabstop>af_calle</tabstop>
+  <tabstop>af_altura</tabstop>
+  <tabstop>af_piso</tabstop>
+  <tabstop>af_depto</tabstop>
+  <tabstop>af_barrio</tabstop>
+  <tabstop>af_localidad</tabstop>
+  <tabstop>af_codigo_postal</tabstop>
+  <tabstop>af_lugar_trabajo</tabstop>
+  <tabstop>af_jerarquia</tabstop>
+  <tabstop>af_fecha_ingreso</tabstop>
+  <tabstop>af_antiguedad</tabstop>
+  <tabstop>af_nivel_estudios</tabstop>
+  <tabstop>af_tel_particular</tabstop>
+  <tabstop>af_celular</tabstop>
+  <tabstop>af_tel_laboral</tabstop>
+  <tabstop>af_email</tabstop>
+  <tabstop>btn_guardar_afiliado</tabstop>
+  <tabstop>tableView_3</tabstop>
+  <tabstop>comboBox_15</tabstop>
+  <tabstop>lineEdit_29</tabstop>
+  <tabstop>lineEdit_27</tabstop>
+  <tabstop>lineEdit_28</tabstop>
+  <tabstop>dateEdit_3</tabstop>
+  <tabstop>lineEdit_33</tabstop>
+  <tabstop>comboBox_9</tabstop>
+  <tabstop>btn_guardar_familiar</tabstop>
   <tabstop>dateEdit_7</tabstop>
+  <tabstop>comboBox_16</tabstop>
+  <tabstop>spinBox</tabstop>
+  <tabstop>lineEdit_31</tabstop>
+  <tabstop>btn_guardar_servicio</tabstop>
   <tabstop>tableView_2</tabstop>
   <tabstop>lineEdit_32</tabstop>
-  <tabstop>pushButton_imprimirPlanilla</tabstop>
-  <tabstop>pushButton_ingresarDebito</tabstop>
+  <tabstop>btn_guardar_servicio_nuevo</tabstop>
   <tabstop>af_banco</tabstop>
   <tabstop>af_sucursal</tabstop>
   <tabstop>af_cbu</tabstop>
   <tabstop>btn_guardar_cbu</tabstop>
   <tabstop>tbl_debitos</tabstop>
+  <tabstop>pushButton_ingresarDebito</tabstop>
+  <tabstop>pushButton_imprimirPlanilla</tabstop>
   <tabstop>tableView</tabstop>
  </tabstops>
  <resources/>
