Modulos Baja afiliado y Historial descuento andan.

--- a/gui/detalles/detalleAfiliados.ui
+++ b/gui/detalles/detalleAfiliados.ui
@@ -4350,7 +4350,7 @@ color: #FFFFFF ;
         </spacer>
        </item>
        <item row="2" column="2">
-        <widget class="QPushButton" name="pushButton_ingresarDebito">
+        <widget class="QPushButton" name="btn_ingresar_debito">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
            <horstretch>0</horstretch>
@@ -4391,7 +4391,7 @@ color: #FFFFFF;
         </widget>
        </item>
        <item row="2" column="3">
-        <widget class="QPushButton" name="pushButton_imprimirPlanilla">
+        <widget class="QPushButton" name="btn_imprimir_planilla">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
            <horstretch>0</horstretch>
@@ -5049,7 +5049,7 @@ background-color: #F8F7F6
            </widget>
           </item>
           <item row="1" column="0">
-           <widget class="QTableView" name="tableView">
+           <widget class="QTableView" name="tbl_historial_debitos">
             <property name="palette">
              <palette>
               <active>
@@ -5156,9 +5156,9 @@ background-color: #F8F7F6
   <tabstop>af_cbu</tabstop>
   <tabstop>btn_guardar_cbu</tabstop>
   <tabstop>tbl_debitos</tabstop>
-  <tabstop>pushButton_ingresarDebito</tabstop>
-  <tabstop>pushButton_imprimirPlanilla</tabstop>
-  <tabstop>tableView</tabstop>
+  <tabstop>btn_ingresar_debito</tabstop>
+  <tabstop>btn_imprimir_planilla</tabstop>
+  <tabstop>tbl_historial_debitos</tabstop>
  </tabstops>
  <resources/>
  <connections/>
