--- a/gui/listas/listaUtilidades.ui
+++ b/gui/listas/listaUtilidades.ui
@@ -52,8 +52,8 @@ background-color: #FFFFFF;
       <string/>
      </property>
      <layout class="QGridLayout" name="gridLayout_3">
-      <item row="4" column="0">
-       <widget class="QPushButton" name="pushButton_2">
+      <item row="1" column="0">
+       <widget class="QPushButton" name="configurar_red">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
           <horstretch>0</horstretch>
@@ -61,11 +61,116 @@ background-color: #FFFFFF;
          </sizepolicy>
         </property>
         <property name="text">
-         <string>Exportar Listado de Afiliados</string>
+         <string>Configuración de Red</string>
         </property>
         <property name="icon">
          <iconset>
-          <normaloff>../iconos/notepad.ico</normaloff>../iconos/notepad.ico</iconset>
+          <normaloff>../iconos/map.ico</normaloff>../iconos/map.ico</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>25</width>
+          <height>25</height>
+         </size>
+        </property>
+       </widget>
+      </item>
+      <item row="13" column="0">
+       <spacer name="verticalSpacer">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>100</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="11" column="0">
+       <widget class="QPushButton" name="pushButton_7">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="text">
+         <string>Impresion de Ficha de Afiliado</string>
+        </property>
+        <property name="icon">
+         <iconset>
+          <normaloff>../iconos/print_preview.ico</normaloff>../iconos/print_preview.ico</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>25</width>
+          <height>25</height>
+         </size>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0">
+       <widget class="QPushButton" name="pushButton">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="text">
+         <string>Ver Movimientos del Mes</string>
+        </property>
+        <property name="icon">
+         <iconset>
+          <normaloff>../iconos/pack2.ico</normaloff>../iconos/pack2.ico</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>25</width>
+          <height>25</height>
+         </size>
+        </property>
+       </widget>
+      </item>
+      <item row="10" column="0">
+       <widget class="QPushButton" name="pushButton_6">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="text">
+         <string>Calculador Cuota SIND/ADIC</string>
+        </property>
+        <property name="icon">
+         <iconset>
+          <normaloff>../iconos/calculator.ico</normaloff>../iconos/calculator.ico</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>25</width>
+          <height>25</height>
+         </size>
+        </property>
+       </widget>
+      </item>
+      <item row="8" column="0">
+       <widget class="QPushButton" name="pushButton_5">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="text">
+         <string>Imprimir Solicitud de Crédito</string>
+        </property>
+        <property name="icon">
+         <iconset>
+          <normaloff>../iconos/documents.ico</normaloff>../iconos/documents.ico</iconset>
         </property>
         <property name="iconSize">
          <size>
@@ -98,8 +203,8 @@ background-color: #FFFFFF;
         </property>
        </widget>
       </item>
-      <item row="7" column="0">
-       <widget class="QPushButton" name="pushButton_5">
+      <item row="5" column="0">
+       <widget class="QPushButton" name="pushButton_2">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
           <horstretch>0</horstretch>
@@ -107,34 +212,11 @@ background-color: #FFFFFF;
          </sizepolicy>
         </property>
         <property name="text">
-         <string>Imprimir Solicitud de Crédito</string>
+         <string>Exportar Listado de Afiliados</string>
         </property>
         <property name="icon">
          <iconset>
-          <normaloff>../iconos/documents.ico</normaloff>../iconos/documents.ico</iconset>
-        </property>
-        <property name="iconSize">
-         <size>
-          <width>25</width>
-          <height>25</height>
-         </size>
-        </property>
-       </widget>
-      </item>
-      <item row="9" column="0">
-       <widget class="QPushButton" name="pushButton_6">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="text">
-         <string>Calculador Cuota SIND/ADIC</string>
-        </property>
-        <property name="icon">
-         <iconset>
-          <normaloff>../iconos/calculator.ico</normaloff>../iconos/calculator.ico</iconset>
+          <normaloff>../iconos/notepad.ico</normaloff>../iconos/notepad.ico</iconset>
         </property>
         <property name="iconSize">
          <size>
@@ -145,7 +227,7 @@ background-color: #FFFFFF;
        </widget>
       </item>
       <item row="2" column="0">
-       <widget class="QPushButton" name="pushButton">
+       <widget class="QPushButton" name="configurar_impresora">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
           <horstretch>0</horstretch>
@@ -153,70 +235,11 @@ background-color: #FFFFFF;
          </sizepolicy>
         </property>
         <property name="text">
-         <string>Ver Movimientos del Mes</string>
-        </property>
-        <property name="icon">
-         <iconset>
-          <normaloff>../iconos/pack2.ico</normaloff>../iconos/pack2.ico</iconset>
-        </property>
-        <property name="iconSize">
-         <size>
-          <width>25</width>
-          <height>25</height>
-         </size>
-        </property>
-       </widget>
-      </item>
-      <item row="10" column="0">
-       <widget class="QPushButton" name="pushButton_7">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="text">
-         <string>Impresion de Ficha de Afiliado</string>
+         <string>Configuración de Impresora</string>
         </property>
         <property name="icon">
          <iconset>
           <normaloff>../iconos/print_preview.ico</normaloff>../iconos/print_preview.ico</iconset>
-        </property>
-        <property name="iconSize">
-         <size>
-          <width>25</width>
-          <height>25</height>
-         </size>
-        </property>
-       </widget>
-      </item>
-      <item row="12" column="0">
-       <spacer name="verticalSpacer">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>100</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item row="1" column="0">
-       <widget class="QPushButton" name="configurar_red">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="text">
-         <string>Configuración de Red</string>
-        </property>
-        <property name="icon">
-         <iconset>
-          <normaloff>../iconos/map.ico</normaloff>../iconos/map.ico</iconset>
         </property>
         <property name="iconSize">
          <size>
