--- a/gui/listas/listaProcesador.ui
+++ b/gui/listas/listaProcesador.ui
@@ -86,6 +86,18 @@ color: #FFFFFF;
        <bold>true</bold>
       </font>
      </property>
+     <property name="styleSheet">
+      <string notr="true">alternate-background-color: rgb(212, 212, 255)</string>
+     </property>
+     <property name="alternatingRowColors">
+      <bool>true</bool>
+     </property>
+     <attribute name="horizontalHeaderStretchLastSection">
+      <bool>true</bool>
+     </attribute>
+     <attribute name="verticalHeaderVisible">
+      <bool>false</bool>
+     </attribute>
     </widget>
    </item>
    <item row="0" column="0" colspan="2">
